<resources>
    <string name="app_name">pract11</string>
    <string name="hello">Здравствуйте!</string>
    <string name="choice">Выберите действие:</string>
    <string name="sozdat">Запомнить книгу</string>
    <string name="spisok">Показать список книг</string>
    <string name="nazvanie">Название книги:</string>
    <string name="avtori">Автор:</string>
    <string name="kolvo">Количество страниц:</string>
    <string name="zapomnit_button">Запомнить</string>
    <string name="spis">Список книг</string>

</resources>